--- a/style.css
+++ b/style.css
@@ -277,12 +277,14 @@ button.danger:hover {
 }
 
 .thumbs img {
-    width: 120px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
     border-radius: 4px;
     border: 1px solid var(--border);
     cursor: pointer;
+    background-color: #eee;
+    display: block;
 }
 
 .imgGrid {
