--- a/style.css
+++ b/style.css
@@ -76,6 +76,9 @@ header {
 .header-search-container {
     margin-left: 20px;
     width: 300px;
+    display: flex;
+    align-items: center;
+    /* Center vertically */
 }
 
 .search-input {
